# 586-backend

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  project-notes.md
src/lib/: di.h  http.cpp  http.h  httpclient.cpp  httpclient.h  precompile.h
src/lib/app/: app.cpp  app.h  error.h
src/lib/auth/: actor.cpp  actor.h  authenticator.cpp  authenticator.h  perm.h  requirements.cpp  requirements.h
src/lib/config/: auth.cpp  auth.h  config.cpp  config.h  http.cpp  http.h  sqlite.cpp  sqlite.h
src/lib/data/: data.h  json.h  new-odb.cpp  new-odb.h  new-odb.i  new.cpp  new.h  new.xml
src/lib/idatabase/: idatabase.h  sqlitedatabase.cpp  sqlitedatabase.h
src/lib/iendpoint/: addproject.cpp  addproject.h  addtask.cpp  addtask.h  addworker.cpp  addworker.h  assigntask.cpp  assigntask.h  debug.h  delproject.cpp  delproject.h  getproject.cpp  getproject.h  getprojects.cpp  getprojects.h  getroles.cpp  getroles.h  gettask.cpp  gettask.h  getusers.cpp  getusers.h  getworker.cpp  getworker.h  getworkers.cpp  getworkers.h  iendpoint.h  unassigntask.cpp  unassigntask.h
src/lib/ihandler/: getjwt.cpp  getjwt.h  httphandler.cpp  httphandler.h  ihandler.h
src/lib/irouter/: apirouter.cpp  apirouter.h  irouter.h
src/lib/iserver/: httpserver.cpp  httpserver.h  iserver.h
src/lib/server/: apiparse.cpp  apiparse.h  apipath.cpp  apipath.h
src/lib/util/: color.cpp  color.h  containers.h  envt.h  json.h  jwt.h  lazy.h  newtype.h  print.h  single.h  string.h  typename.h  variant.h  void.h
src/mvc/: main.cpp
src/test/: main.cpp  test.h
tools/: odb
